BE - Leisure bases - update
